fixed the overflow in about, contact pages

--- a/css/contact.css
+++ b/css/contact.css
@@ -19,7 +19,10 @@
             padding: 0;
             box-sizing: border-box;
         }
-
+        html{
+            max-width: 100vw !important;
+            overflow-x: hidden !important;
+        }
         body {
             font-family: 'Poppins', sans-serif;
             background-color: var(--cream);
